--- a/assets/sass/generals.scss
+++ b/assets/sass/generals.scss
@@ -9,6 +9,7 @@ body {
     margin-right:30px ;
 }
 .btn{
+    height: 30px;
     text-decoration: none;
     text-align: center;
     padding: 6px;
@@ -20,6 +21,7 @@ body {
     &-primary{
         background-color: $yellow;
         color: $lightgrey;
+        border: none;
     }
     &-secondary{
         border: solid 3px $yellow;
@@ -30,10 +32,33 @@ h1{
     font-size: 20px;
 }
 h2{
-    font-size: 20px;
+    font-size: 18px;
+}
+p{
+    font-size: 12px;
+}
+a{
+    text-decoration: none;
 }
 
 input[type="text"]::placeholder {  
 
     padding-left: 12px; 
 } 
+
+@media screen and (min-width: 500px)
+{
+    body{
+        margin-left:150px ;
+        margin-right:150px ;
+    }
+    h1{
+        font-size: 24px;
+    }
+    h2{
+        font-size: 24px;
+    }
+    p{
+        font-size: 20px;
+    }
+}
