--- a/views/Components/footer.ejs
+++ b/views/Components/footer.ejs
@@ -1,4 +1,11 @@
-<h1>C'EST LE FOOTER</h1>
+<footer>
+    <div class="parent footer_list">
+        <div class="div1"> a</div>
+        <div class="div2">a </div>
+        <div class="div3"> a</div>
+    </div>
+</footer>
+<script src="js/cart.js"></script>
 </body>
 
 </html>
