--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -1,5 +1,30 @@
 <%- include('./Components/header') %>
-    <div class="home_theones_content" id="cart">
 
+    <div class="cart" onload="displayCart()">
+        <div class="cart_content" id="cart">
+            <h1>Votre panier</h1>
+
+        </div>
+        <div class="cart_proceed">
+            <h1>Résumé</h1>
+            <div>
+                <div>
+                    <p>Sous total</p>
+                    <p>ddd</p>
+                </div>
+                <div>
+                    <!-- Ici tu mets juste genre prix*20/100 -->
+                    <p>TVA 20%</p>
+                    <p>ddd</p>
+                </div>
+                <div>
+                    <!-- Le total tva + sous total -->
+                    <p>Total</p>
+                    <p>ddd</p>
+                </div>
+                <button class="btn btn-primary">Passer la commande</button>
+            </div>
+        </div>
     </div>
+
     <%- include('./Components/footer') %>
