--- a/assets/sass/login.scss
+++ b/assets/sass/login.scss
@@ -27,6 +27,7 @@ input {
 .login_button{
     display: flex;
     justify-content: center;
+    padding: 20px;
 }
 .login_link{
     text-decoration: none;
