--- a/views/product.ejs
+++ b/views/product.ejs
@@ -36,7 +36,7 @@
         </div>
         <div class="product_infos_bottom">
           
-            <button class="btn btn-primary" id="<%=products[id].id%>">Ajouter au panier</button>
+            <button class="btn btn-primary" id="<%=products[id].id%>"  id="card_<%=id%>" onclick="CatchValues(<%= id %>)">Ajouter au panier</button>
         </div>
     </div>
 </div>
